--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   font_awesome_flutter: ^10.7.0
+  table_calendar: ^3.1.1
+  get: ^4.6.6
+  flutter_blue_plus: ^1.32.7
+  permission_handler:
 
 dev_dependencies:
   flutter_test:
