--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: getting_started
+name: ble_Scanner
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_svg: ^2.0.10+1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,10 +44,23 @@ dependencies:
   lottie: ^3.1.2
   swipeable_button_flutter: ^0.0.3
   page_transition: ^2.1.0
+  google_fonts: ^6.2.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/playstore.png"
+  image_path_ios: "images/appstore.png"
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -71,7 +83,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/LogoSy.jpg
+    - images/LogoSynobg.png
     - images/bgnoicon.png
+    - images/secondpg.png
     - images/bk1.png
     - images/wavenobg.jpg
     - images/wavetec.png
@@ -79,6 +93,9 @@ flutter:
     - images/blue.jpg
     - images/bluetooth.svg
     - images/checked.json
+    - images/appstore.png
+    - images/playstore.png
+    - images/devicehome.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
